--- a/doc/grammar.org
+++ b/doc/grammar.org
@@ -7,6 +7,7 @@
 #+LaTeX_HEADER: \usepackage{listings}
 #+LaTeX_HEADER: \usepackage{hyperref}
 #+LaTeX_HEADER: \usepackage{mathtools}
+#+LaTeX_HEADER: \usepackage{draftwatermark}
 #+LaTeX_HEADER: \hypersetup{colorlinks, citecolor=black, filecolor=black, linkcolor=black, urlcolor=black}
 #+OPTIONS: toc:nil num:1 email:t footer:nil
 
@@ -16,7 +17,7 @@
 
 #+LaTeX: \par\noindent
 ~cl-jackc~[fn:5] is an implementation of a compiler for the Jack
-programming language. It uses its own grammar engine for $LL(1)$
+programming language. It uses its own grammar engine for language
 grammars, written from scratch in Common Lisp. This article outlines
 the domain-specific language for specifying grammar rules, its key
 points, and my experience on building the matching engine which
@@ -26,8 +27,8 @@ interprets the grammar language.
 * Introduction
 
 Building programming languages is often an arduous, but fun task. Some
-of the work lies on the designing of the language and its syntactical
-elements /per se/. The rest of the work lies on building the tools
+of the work lies on designing the language and its syntactical
+elements. The rest of the work lies on building the tools
 to make the language work, namely the compiler toolchain. In this
 article, I discuss a fragment of the compiler toolchain for the Jack
 programming language, one of the projects proposed by Nisan and
@@ -37,7 +38,7 @@ analysis of the Jack programming language.
 The related book provides a very clear grammar for Jack, and so the
 job of the reader is to simply write a compiler for the language, in
 two different projects[fn:4]. Here I show some of my strategies to
-build the first of the projects, while having zero experience on
+build the first of the projects, despite having zero experience on
 writing compilers.
 
 Nisan and Schocken (2008) cite:nand2tetris provide a blueprint for the
@@ -46,8 +47,8 @@ the reader is sped up. This model, however, obeys certain principles
 of object-oriented design which describe a very rigid software
 architecture. Due to influence of Abelson and Sussman (1996)
 cite:sicp, when primarily thinking of what to do, I did not view the
-compiler architecture as a rigid hierarchy of software modules,
-interacting with each other. While the modularization is still
+compiler architecture as a monolithic hierarchy of software modules,
+interacting with each other. Though the modularization is still
 maintained, mostly for file organization and for keeping some degree
 of similarity with the proposed implementation, the syntax analyzer
 was primarily designed as layers of software comprising of certain
@@ -63,7 +64,7 @@ and operation of this topmost grammar language are detailed as follows.
 
 * Grammars
 
-Vieira (2006)cite:newton2006 states that a grammar is a formalism
+According to Vieira (2006)cite:newton2006, a grammar is a formalism
 originally conceived for defining formal languages. The fundamental
 elements of grammars are the /rules/, which demonstrate how to generate
 a language's /words/.
@@ -100,12 +101,13 @@ B &\rightarrow \lambda
 These /rules/ belong to a certain type of grammar which will be crucial
 to the incoming object of discussion. Given a starting point $A$, as
 per Rule 1, it is possible to infer that this language is capable of
-generating /words/ with an arbitrary number of "$a$" /terminals/, plus a
-dangling "$A$" variable at the end. After that, $A$ can be transformed
-into $B$ (Rule 2), and $B$ is then transformed into the /empty word/
-$\lambda$ (Rule 3), which acts as the stopping point for grammar
-generation, leaving only a /word/ comprised of /terminals/. This language
-may also be represented as $\{a\}^{*}$.
+generating /sentential forms/ with an arbitrary number of "$a$"
+/terminals/, plus a dangling "$A$" variable at the end. After that, $A$
+can be transformed into $B$ (Rule 2), and $B$ is then transformed into
+the /empty word/ $\lambda$ (Rule 3), which acts as the stopping point
+for grammar generation, leaving only a /sentential form/ comprised of
+/terminals/ (a /word/). This language may also be represented as
+$\{a\}^{*}$.
 
 The previous example is interesting because the left-hand part of all
 rules is comprised only of /variables/. This means that, for any given
@@ -115,15 +117,14 @@ it. Furthermore, it is only necessary to find and replace /variables/ in
 the /sentential form/, and never to analyze the disposition of
 /terminals/, since there are no /rules/ requiring this procedure.
 
-A grammar for the Jack language cite:nand2tetris is written using
-exactly this model. Each of the /rules/ are a simple pair, where the
-first component is a /variable/ which may appear anywhere, and so it can
-be transformed by another given rule of the grammar. Using this simple
-theorem, it is possible to write an application which takes a /source
-code/ and parses it, so that this analysis indicates whether the /code/
-is a /word/ of the Jack /language/ or not.
-
-#+TODO: What is an LL(1) grammar?
+A grammar for the Jack language (Simon and Schocken, 2008)
+cite:nand2tetris is written using exactly this model. Each of the
+/rules/ are a simple pair, where the first component is a /variable/ which
+may appear anywhere, and so it can be transformed by another given
+rule of the grammar. Using this simple theorem, it is possible to
+write an application which takes a /source code/ and parses it, so that
+this analysis indicates whether the /code/ is a /word/ of the Jack
+/language/ or not.
 
 * Compiler's grammar syntax
 
@@ -402,7 +403,7 @@ The example outlined in Figure [[fig:var_example]] is by no means
 practical, since there are more sophisticated ways of matching a
 variable declaration, but it should be enough for a brief
 explanation. Additionally, the obligatory ~:SYMBOL~ and ~:KEYWORD~ rules
-were omitted, as they are potentially implied by context.
+were omitted, as they are potentially deducible by context.
 
 Suppose that the compiler reads a file which may contain many variable
 declarations, as exemplified in Figure [[fig:var_file]]. We begin by
@@ -438,7 +439,7 @@ the quantified variable declarations.
 
 Grammar engines are certainly of great interest when designing a
 language, and so they often shape the way languages work to ensure
-that the syntax analysis of said language can be done by such a
+that the syntax analysis of said language can be done by such an
 engine. They also yield seemingly simple structures when implemented,
 which guarantees easier debugging.
 
@@ -478,14 +479,14 @@ bibliography:~/Dropbox/bibliografias/references.bib
 the rest of the toolchain (Assembler and VM Translator) is built in
 chapters prior to the compiler-related chapters.
 
-[fn:3] This is mostly an arbitrary choice, and the comments may be
-easily incorporated in the grammar. However, comments should not
-relate to grammatical rules themselves.
-
 [fn:2] This choice was made due to Common Lisp's structure regarding
 /packages/, which are analogous to C libraries in some ways. A Lisp
 ~KEYWORD~ is agnostic to context, as it belongs to its own package,
 whereas the next obvious choice (a Lisp ~SYMBOL~) is not.
 
 [fn:1]  For better understanding, the word /namespace/ was used, though
-not technically correct.
+not technically correct from Common Lisp's point of view.
+
+[fn:3] This is mostly an arbitrary choice, and the comments may be
+easily incorporated in the grammar. However, comments should not
+relate to grammatical rules themselves.
