Add proper references and pt-br link for grammar article

--- a/doc/grammar.org
+++ b/doc/grammar.org
@@ -469,7 +469,7 @@ foundation to one of my future projects.
 <<bibliography link>>
 
 bibliographystyle:abbrv
-bibliography:~/Dropbox/bibliografias/references.bib
+bibliography:references.bib
 
 * Footnotes
 
