--- a/README.org
+++ b/README.org
@@ -236,6 +236,7 @@ Below are links to more information related to this project.
 
 - [Portuguese] [[https://medium.com/@luksamuk/integrando-testes-autom%C3%A1ticos-para-common-lisp-com-docker-e-travis-ci-a3259a79a821][Integrando testes automáticos para Common Lisp com Docker e Travis CI]]
 - [English] ~cl-jackc~'s Grammar Language ([[doc/grammar.org][Org]] / [[doc/grammar.tex][TeX]])
+- [Portuguese] A Linguagem de Gramática do ~cl-jackc~ ([[https://medium.com/@luksamuk/a-linguagem-de-gram%C3%A1tica-do-cl-jackc-a5abafd8d15f?source=friends_link&sk=e90f8a9862265421712583b6c8d526c5][Medium]])
 
 * License
 
