Fix documentation generation and add missing docs

--- a/README.org
+++ b/README.org
@@ -264,6 +264,8 @@ the unit tests:
 
 * Extra information
 
+For a brief documentation, check the generated [[file:doc/index-txt.html][documentation file]].
+
 Below are links to more information related to this project.
 
 - [Portuguese] [[https://medium.com/@luksamuk/integrando-testes-autom%C3%A1ticos-para-common-lisp-com-docker-e-travis-ci-a3259a79a821][Integrando testes automáticos para Common Lisp com Docker e Travis CI]]
